WARNING: CPU: 0 PID: 370 at drivers/gpu/drm/amd/amdgpu/../display/dc/calcs/dcn_calcs.c:1355 dcn_bw_update_from_pplib+0x16b/0x280 [amdgpu]
Submitted by Paul Menzel
Assigned to Default DRI bug account
Link to original bug (#107296)
Description
Created attachment 140716
Linux 4.18-rc5+ (with merged drm-tip) messages
On a MSI B350M MORTAR (MS-7A37) with AMD Ryzen 3 2200G with Radeon Vega Graphics and with Linux 4.18-rc5+ with merged drm-tip the warning below is always shown.
15.355: [ 24.263999] WARNING: CPU: 0 PID: 370 at drivers/gpu/drm/amd/amdgpu/../display/dc/calcs/dcn_calcs.c:1355 dcn_bw_update_from_pplib+0x16b/0x280 [amdgpu]
15.356: [ 24.294351] Modules linked in: nls_ascii nls_cp437 vfat fat amdkfd snd_hda_codec_realtek amdgpu(+) snd_hda_codec_generic chash snd_hda_codec_hdmi efi_pstore i2c_algo_bit edac_mce_amd snd_hda_intel snd_hda_codec gpu_sched ccp rng_core drm_kms_helper snd_hda_core syscopyarea sysfillrect r8169 kvm sysimgblt irqbypass fb_sys_fops snd_hwdep ttm sp5100_tco crct10dif_pclmul snd_pcm crc32_pclmul snd_timer pcspkr snd sg ghash_clmulni_intel k10temp efivars mii drm soundcore i2c_piix4 video button efivarfs ip_tables x_tables autofs4 ext4 crc32c_generic crc16 mbcache jbd2 fscrypto dm_crypt dm_mod sd_mod evdev hid_generic usbhid hid crc32c_intel aesni_intel ahci xhci_pci aes_x86_64 libahci crypto_simd xhci_hcd libata cryptd glue_helper usbcore scsi_mod gpio_amdpt gpio_generic
15.360: [ 24.365932] CPU: 0 PID: 370 Comm: systemd-udevd Not tainted 4.18.0-rc5+ #2
15.360: [ 24.365933] Hardware name: MSI MS-7A37/B350M MORTAR (MS-7A37), BIOS 1.G1 05/17/2018
15.361: [ 24.365984] RIP: 0010:dcn_bw_update_from_pplib+0x16b/0x280 [amdgpu]
15.361: [ 24.388384] Code: d8 ca d8 f1 d9 5a 50 8b 44 fc 14 49 8b 94 24 70 01 00 00 48 89 04 24 df 2c 24 d8 f1 db 42 78 de c9 de ca de f9 d9 5a 4c eb 02 <0f>
0b 48 89 da be 04 00 00 00 48 89 ef e8 33 5a fe ff 84 c0 0f 84
15.363: [ 24.388405] RSP: 0018:ffffa31f0259f7c8 EFLAGS: 00010246
15.363: [ 24.414366] RAX: 0000000000000001 RBX: ffffa31f0259f828 RCX: 0000000000000000
15.364: [ 24.414367] RDX: 0000000000000000 RSI: 0000000000000004 RDI: ffff97d5de816730
15.365: [ 24.414368] RBP: ffff97d5c3f09d40 R08: 00000028c4bad032 R09: 000000000000001f
15.365: [ 24.414369] R10: 0000000000000af4 R11: 00000000003c7cb4 R12: ffff97d5c0e3d000
15.366: [ 24.445133] R13: ffff97d5c825dd00 R14: ffff97d5c0e3d000 R15: 0000000000000000
15.366: [ 24.445134] FS: 00007fd442ec88c0(0000) GS:ffff97d5de800000(0000) knlGS:0000000000000000
15.367: [ 24.445135] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
15.367: [ 24.467698] CR2: 00007fd34c0034c8 CR3: 0000000403e6c000 CR4: 00000000003406f0
15.368: [ 24.467699] Call Trace:
15.368: [ 24.467748] dcn10_create_resource_pool+0x756/0x990 [amdgpu]
15.369: [ 24.484250] dc_create_resource_pool+0x42/0x180 [amdgpu]
15.369: [ 24.484254] ? __kmalloc+0x1b4/0x250
15.369: [ 24.493877] ? dal_gpio_service_create+0x8f/0x110 [amdgpu]
15.370: [ 24.493922] dc_create+0x228/0x650 [amdgpu]
15.370: [ 24.504339] ? amdgpu_cgs_create_device+0x23/0x50 [amdgpu]
15.371: [ 24.504386] dm_hw_init+0xc8/0x130 [amdgpu]
15.371: [ 24.514764] amdgpu_device_init.cold.28+0x10ea/0x1295 [amdgpu]
15.372: [ 24.514803] amdgpu_driver_load_kms+0x86/0x2c0 [amdgpu]
15.372: [ 24.526681] drm_dev_register+0x109/0x140 [drm]
15.372: [ 24.526720] amdgpu_pci_probe+0x13c/0x1c0 [amdgpu]
15.373: [ 24.536741] local_pci_probe+0x41/0x90
15.373: [ 24.536743] pci_device_probe+0x189/0x1a0
15.373: [ 24.545118] driver_probe_device+0x2b9/0x460
15.374: [ 24.545120] __driver_attach+0xdd/0x110
15.374: [ 24.553853] ? driver_probe_device+0x460/0x460
15.374: [ 24.553855] bus_for_each_dev+0x76/0xc0
15.375: [ 24.562813] ? klist_add_tail+0x3b/0x70
15.375: [ 24.562814] bus_add_driver+0x152/0x230
15.375: [ 24.571094] ? 0xffffffffc08bf000
15.376: [ 24.571096] driver_register+0x6b/0xb0
15.376: [ 24.578735] ? 0xffffffffc08bf000
15.376: [ 24.578737] do_one_initcall+0x46/0x1c3
15.377: [ 24.578739] ? kmem_cache_alloc_trace+0x183/0x1f0
15.377: [ 24.591626] ? do_init_module+0x22/0x210
15.377: [ 24.591628] do_init_module+0x5a/0x210
15.378: [ 24.591630] load_module+0x21c4/0x2410
15.378: [ 24.603927] ? vfs_read+0x110/0x140
15.378: [ 24.603929] ? __do_sys_finit_module+0xa8/0x110
15.379: [ 24.612601] __do_sys_finit_module+0xa8/0x110
15.379: [ 24.612602] do_syscall_64+0x55/0xe0
15.379: [ 24.621178] entry_SYSCALL_64_after_hwframe+0x44/0xa9
15.380: [ 24.621179] RIP: 0033:0x7fd443f25a79
15.380: [ 24.630489] Code: 00 f3 c3 66 2e 0f 1f 84 00 00 00 00 00 0f 1f 40 00 48 89 f8 48 89 f7 48 89 d6 48 89 ca 4d 89 c2 4d 89 c8 4c 8b 4c 24 08 0f 05 <48>
3d 01 f0 ff ff 73 01 c3 48 8b 0d df 43 0c 00 f7 d8 64 89 01 48
15.382: [ 24.650822] RSP: 002b:00007ffffe006958 EFLAGS: 00000246 ORIG_RAX: 0000000000000139
15.382: [ 24.650823] RAX: ffffffffffffffda RBX: 000056217c76ecc0 RCX: 00007fd443f25a79
15.383: [ 24.650825] RDX: 0000000000000000 RSI: 00007fd443c2d0ed RDI: 0000000000000018
15.383: [ 24.674422] RBP: 00007fd443c2d0ed R08: 0000000000000000 R09: 0000000000000000
15.384: [ 24.674422] R10: 0000000000000018 R11: 0000000000000246 R12: 0000000000000000
15.385: [ 24.674423] R13: 000056217c76b5d0 R14: 0000000000020000 R15: 000056217c76ecc0
15.385: [ 24.674470] WARNING: CPU: 0 PID: 370 at drivers/gpu/drm/amd/amdgpu/../display/dc/calcs/dcn_calcs.c:1355 dcn_bw_update_from_pplib+0x16b/0x280 [amdgpu]
15.386: [ 24.712143] ---[ end trace 115af7e91900bac6 ]---
Attachment 140716, "Linux 4.18-rc5+ (with merged drm-tip) messages":
seriallog-20180719_190629.log